<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Naroid - Sample Android App</string>
    <string name="app_name_basic">Basic | Naroid - Sample Android App</string>
    <string name="app_name_basic_layouts">Layouts | Basic | Naroid - Sample Android App</string>
    <string name="app_name_basic_widgets">Widgets | Basic | Naroid - Sample Android App</string>
    <string name="app_name_advanced">Advanced | Naroid - Sample Android App</string>
    <string-array name="launcher_list">
        <item>Basic</item>
        <item>Advanced</item>
    </string-array>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="about_page_content">Dear Developer,\nWelcome to <b>Naroid - Sample Android App</b>.\n\nThis project is <b>open source</b>! Full source code is available at https://github.com/phpdevmd/NaroidSampleAndroidApp.\n\nYou are free to re-use and re-distribute it.\n\nDeveloped by phpdevmd@gmail.com.</string>
    <string-array name="basic_samples">
        <item>Hello World</item>
        <item>Auto Links</item>
        <item>Scrollbar</item>
        <item>Menu</item>
        <item>Layouts and Views</item>
        <item>Widgets and Other Views</item>
    </string-array>
    <string-array name="layouts_views">
        <item>Linear Layout</item>
        <item>Relative Layout</item>
        <item>Table Layout</item>
        <item>Grid View</item>
        <item>Tab Layout</item>
        <item>List View</item>
    </string-array>
    <string-array name="widgets_other_views">
        <item>Date Picker</item>
        <item>Time Picker</item>
        <item>Form Stuff</item>
        <item>Spinner</item>
        <item>Auto Complete</item>
        <item>Gallery</item>
        <item>Google Map View</item>
        <item>Web View</item>
    </string-array>
    <string-array name="advanced_samples">
        <item>Localization</item>
    </string-array>
    <string name="unknown_item_clicked">Sorry, you clicked unknown item: %s.</string>
    <string name="hello_world">Hello World!</string>
    <string name="auto_links_page_content">In order to automatically transform addresses in your text into clickable links, just add <b>android:autoLink=\"all\"</b> attribute to your <b>TextView</b> element, so it looks like this:\n\n&lt;TextView\n\tandroid:layout_width=\"fill_parent\"\n\tandroid:layout_height=\"wrap_content\"\n\tandroid:autoLink=\"all\"\n\tandroid:text=\"@string/auto_links_page_content\"\n\t/&gt;\n\n\nThis will transform email addresses, map addresses, phone numbers and web urls into links like this:\n1. example@email.com\n2. 620 Eighth Avenue New York, NY 10018\n3. +1(919)555-1212\n4. http://www.example.com</string>
    <string name="scrollbar_page_content">The main idea here is to make your <b>layout xml</b> like this:\n\n<i>&lt;?xml version=\"1.0\" encoding=\"utf-8\"?&gt;\n&lt;ScrollView xmlns:android=\"http://schemas.android.com/apk/res/android\"\n\tandroid:layout_width=\"fill_parent\"\n\tandroid:layout_height=\"wrap_content\"&gt;\n\t&lt;LinearLayout\n\t\tandroid:orientation=\"vertical\"\n\t\tandroid:layout_width=\"fill_parent\"\n\t\tandroid:layout_height=\"wrap_content\"&gt;\n\t\t&lt;TextView\n\t\t\tandroid:layout_width=\"fill_parent\"\n\t\t\tandroid:layout_height=\"wrap_content\"\n\t\t\tandroid:text=\"@string/lorem_ipsum_1_line\"/&gt;\n\t&lt;/LinearLayout&gt;\n&lt;/ScrollView&gt;</i>\n\nExpected more work here? Sorry to disappoint :)\n\n</string>
    <string name="lorem_ipsum_1_line">Lorem ipsum dolor sit amet.</string>
    <string name="menu_page_content">1. Create file <i>/res/menu/main.xml</i> with the following content:\n\n<i>&lt;?xml version=\"1.0\" encoding=\"utf-8\"?&gt;\n&lt;menu xmlns:android=\"http://schemas.android.com/apk/res/android\"&gt;\n\t&lt;item android:title=\"Quit\" android:id=\"@+id/quit\"&gt;&lt;/item&gt;\n&lt;/menu&gt;</i>\n\n\n2. Add following methods into your activity class:\n\n<i>\t@Override\n\tpublic boolean onCreateOptionsMenu(Menu menu) {\n\t\tMenuInflater inflater = getMenuInflater();\n\t\tinflater.inflate(R.menu.main, menu);\n\t\treturn true;\n\t}\n\t@Override\n\tpublic boolean onOptionsItemSelected(MenuItem item) {\n\t\t// Handle item selection\n\t\tswitch (item.getItemId()) {\n\t\tcase R.id.quit:\n\t\t\tNaroidActivity.this.finish();\n\t\t\treturn true;\n\t\tdefault:\n\t\t\treturn super.onOptionsItemSelected(item);\n\t\t}\n\t}</i>\n\n\nExpected more steps? Sorry to disappoint :)</string>
    <string name="blue">blue</string><string name="green">green</string><string name="red">red</string><string name="yellow">yellow</string>
    <string name="row_one">row one</string><string name="row_two">row two</string><string name="row_three">row three</string><string name="row_four">row four</string>
    <string name="type_here">Type here:</string><string name="OK">OK</string><string name="Cancel">Cancel</string>
    <string name="Open">Open...</string><string name="Ctrl_O">Ctrl-O</string><string name="Save">Save...</string><string name="Ctrl_S">Ctrl-S</string><string name="Save_As">Save As...</string><string name="Ctrl_Shift_S">Ctrl-Shift-S</string><string name="Import">Import...</string><string name="X">X</string><string name="Export">Export...</string><string name="Ctrl_E">Ctrl-E</string><string name="Quit">Quit</string>
    <string name="Cut">Cut</string><string name="Copy">Copy</string><string name="Paste">Paste</string><string name="tablayout_cut_page_content">This is the Cut tab</string><string name="tablayout_copy_page_content">This is the Copy tab</string><string name="tablayout_paste_page_content">This is the Paste tab.\n\nIt has the most optimized icon for tabs.</string>
    <string name="Country">Country</string>
    <string-array name="countries_array"><item>Antarctica</item><item>Burkina Faso</item><item>Canada</item><item>China</item><item>Denmark</item><item>Egypt</item><item>Finland</item><item>France</item><item>Germany</item><item>Haiti</item><item>Hong Kong</item><item>India</item><item>Italy</item><item>Japan</item><item>Kenya</item><item>Luxembourg</item><item>Mexico</item><item>Moldova</item><item>Netherlands</item><item>Oman</item><item>Poland</item><item>Russia</item><item>Spain</item><item>Taiwan</item><item>United Kingdom</item><item>United States</item><item>Venezuela</item><item>Western Sahara</item><item>Yemen</item><item>Zimbabwe</item></string-array>
    <string name="Change_date">Change date</string><string name="Change_time">Change time</string>
    <string name="Custom_button_pressed">Custom button pressed</string>
    <string name="check_it_out">check it out</string><string name="Selected">Selected</string><string name="Not_selected">Not selected</string>
    <string name="Red">Red</string><string name="Blue">Blue</string>
    <string name="Vibrate_on">Vibrate on</string><string name="Vibrate_off">Vibrate off</string><string name="Checked">Checked</string><string name="Not_checked">Not checked</string>
    <string name="New_Rating">New Rating: %s</string>
    <string name="planet_prompt">Choose a planet</string><string-array name="planets_array"><item>Mercury</item><item>Venus</item><item>Earth</item><item>Mars</item><item>Jupiter</item><item>Saturn</item><item>Uranus</item><item>Neptune</item></string-array><string name="The_planet_is">The planet is %s</string>
    <string name="localization_page_content">Localization is just about creating an alternative set of resources in <b>res</b> folder, and android will automatically substitute it in the appropriate device.\n\nFor example, to translate your application into another language, create <b>/res/values-(ISO 639-1 language code)/strings.xml</b> file with translated strings (e.g. values-ru, values-en-rGB and so on). Please make sure to include a default resource (e.g. /res/values/strings.xml).\n\nSee http://developer.android.com/guide/topics/resources/localization.html for more information.</string>
</resources>